Minor responsive CSS fix for QR code overlap on browsers with scrollbars

--- a/base.css
+++ b/base.css
@@ -112,7 +112,7 @@ a img { vertical-align: middle; }
     }
     .extra_word { display: none; }
 }
-@media all and (max-width: 600px) {
+@media all and (max-width: 610px) {
     .qrcode { display: none; }
 }
 
